--- a/source/blog.github/src/less/variable.less
+++ b/source/blog.github/src/less/variable.less
@@ -3,3 +3,8 @@
   @md: (min-width:768px);
   @lg: (min-width:992px);
   @xl: (min-width:1200px);
+  @pdaxs: (max-width:0px);
+  @pdasm: (max-width:576px);
+  @pdamd: (max-width:768px);
+  @pdalg: (max-width:992px);
+  @pdaxl: (max-width:1200px);
